# GNSS-Denied-Drone

./: .gitignore  Dockerfile  README.md  guide.txt  requirements.txt  run_demo.sh  setup_env.sh
final_eval_flight/: final_eval_flight_0.mcap  metadata.yaml
install/: local_setup.sh  setup.sh
install/drone_bringup/share/drone_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/drone_description/share/drone_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/drone_eval/lib/drone_eval/: measure_latency
install/drone_eval/share/drone_eval/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drone_gazebo/share/drone_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  (+2 more)
log/: latest_build
src/drone_bringup/: CMakeLists.txt  package.xml
src/drone_bringup/config/: rviz_config.rviz
src/drone_bringup/launch/: sim_and_slam.launch.py
src/drone_description/: CMakeLists.txt  package.xml
src/drone_description/urdf/: drone.urdf  quadcopter.urdf.xacro
src/drone_eval/: package.xml  setup.cfg  setup.py
src/drone_eval/drone_eval/: autonomous_navigator.py  measure_latency.py
src/drone_gazebo/: CMakeLists.txt  package.xml
src/drone_gazebo/worlds/: dark_warehouse.sdf
src/drone_slam/: CMakeLists.txt  package.xml
src/drone_slam/config/: slam_params.yaml
src/drone_slam/launch/: slam_pipeline.launch.py
(+42 files in other folders)
