<?xml version="1.0"?>
<package format="3">
  <name>drone_eval</name>
  <version>0.0.1</version>
  <description>Evaluation scripts (Python package)</description>
  <maintainer email="you@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>