<?xml version="1.0"?>
<package format="3">
  <name>drone_eval</name>
  <version>0.0.0</version>
  <description>Eval Scripts</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>